# visual_test

./: CMakeLists.txt  package.xml  visual_tet_memo.odt
config/move_base/: costmap_v2.yaml  global_costmap_params_v2.yaml  local_costmap_params_old.yaml  local_costmap_params_v3.yaml
config/ros_control/: diff_drive_controller.yaml
launch/: demo_turtlebot3_navigation.launch  description.launch.xml  rtab_mighty2_navi.launch  rtab_mighty2_world.launch  rtab_mighty_navi.launch  rtab_mighty_navi_v2.launch  rtab_mighty_world.launch
nodes/: move_obs.py
nodes/nodes/: move_obs.py  move_obs_0.py  move_obs_1.py  move_obs_2.py  move_obs_3.py  move_obs_4.py  move_obs_5.py  move_obs_6.py  move_obs_7.py  move_obs_8.py
src/: depth_distance.py
worlds/: naoki.world  naoki2.world  naoki4.world  naoki_test.world  naoki_test2.world  visual_test2.world
xacro/: _d435.gazebo.xacro  mighty.xacro  mighty2.xacro  test_d435_camera.urdf.xacro
