<?xml version="1.0"?>
<package>
  <name>visual_test</name>
  <version>0.20.9</version>
  <description>The visual_test package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="k-lab@todo.todo">k-lab</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/visual_test</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  
  <build_depend>cv_bridge</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>rtabmap</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>find_object_2d</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pluginlib</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>stereo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>compressed_depth_image_transport</run_depend>
  <run_depend>compressed_image_transport</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>class_loader</run_depend>
  <run_depend>rtabmap</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>find_object_2d</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>navfn</run_depend>

  <build_depend>libpcl-all-dev</build_depend>

  <export>
	<nodelet plugin="${prefix}/nodelet_plugins.xml" />
	<rviz plugin="${prefix}/rviz_plugins.xml"/>
	<costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>
</package>